primeras correcciones despues de la entrega del trabajo # 3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/modern-normalize.css" />
+  <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css">
   <link rel="stylesheet" href="css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
@@ -15,6 +15,7 @@
 <body>
   <!-- encabezado de la pagina con listas de navegación -->
   <header class="container flex-container">
+    <!-- <div class="container"> -->
     <div>
       <ul class="list">
         <li><a class="link link-webStudio" href="">WebStudio</a></li>
@@ -41,6 +42,7 @@
         </li>
       </ul>
     </div>
+    <!-- <div> -->
   </header>
 
   <!-- titulo principal  y boton de navegacion -->
@@ -103,7 +105,7 @@
             <img class="images" src="images/mobile.jpg" alt="imagen de persona escribiendo sobre mobil" />
           </li>
           <li>
-            <img class="image" src="images/laptop.jpg" alt="imagen de persona escribiendo sobre laptop" />
+            <img class="image" src="images/tablet.jpg" alt="imagen de persona escribiendo sobre laptop" />
           </li>
         </ul>
       </div>
@@ -117,13 +119,13 @@
       </div>
       <div class="section-images">
         <ul class="list-people">
-          <li><img class="images-people" src="images/tarjeta1.jpg" alt="imagen de persona del equipo de trabajo" />
+          <li><img class="images-people" src="images/card1.jpg" alt="imagen de persona del equipo de trabajo" />
           </li>
-          <li><img class="images-people" src="images/tarjeta2.jpg" alt="imagen de persona del equipo de trabajo" />
+          <li><img class="images-people" src="images/card2.jpg" alt="imagen de persona del equipo de trabajo" />
           </li>
-          <li><img class="images-people" src="images/tarjeta3.jpg" alt="imagen de persona del equipo de trabajo" />
+          <li><img class="images-people" src="images/card3.jpg" alt="imagen de persona del equipo de trabajo" />
           </li>
-          <li><img class="images-people" src="images/tarjeta4.jpg" alt="imagen de persona del equipo de trabajo" />
+          <li><img class="images-people" src="images/card4.jpg" alt="imagen de persona del equipo de trabajo" />
           </li>
         </ul>
       </div>
