--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/modern-normalize.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://unpkg.com/modern-normalize@1.1.0/modern-normalize.css">
+  <link rel=" stylesheet" href="css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <title>Portfolio</title>
@@ -57,14 +57,14 @@
       </div>
       <div class="container-card">
         <div>
-          <img class="images-card" src="images/equipo.jpg" alt="sitio-web" />
+          <img class="images-card" src="images/element1.jpg" alt="sitio-web" />
           <div class="card-text">
             <h3 class="card-title">Tecnoduck</h3>
             <p class="paragraph paragraph-text">Sitio-web</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/deporte.jpg" alt="diseño" />
+          <img class="images-card" src="images/element2.jpg" alt="diseño" />
           <div class="card-text">
             <h3 class="card-title">
               Póster de Nueva Orleans vs Estrella Dorada
@@ -73,49 +73,49 @@
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/restaurante.jpg" alt="aplicaciones" />
+          <img class="images-card" src="images/element3.jpg" alt="aplicaciones" />
           <div class="card-text">
             <h3 class="card-title">Restaurante Seafood</h3>
             <p class="paragraph">Aplicaciones</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/diadema.jpg" alt="marketing" />
+          <img class="images-card" src="images/element4.jpg" alt="marketing" />
           <div class="card-text">
             <h3 class="card-title">Proyecto Prime</h3>
             <p class="paragraph paragraph-text">Marketing</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/cajas.jpg" alt="aplicaciones" />
+          <img class="images-card" src="images/element5.jpg" alt="aplicaciones" />
           <div class="card-text">
             <h3 class="card-title">Proyecto Cajas</h3>
             <p class="paragraph paragraph-text">Sitio-web</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/pantalla.jpg" alt="sitio-web" />
+          <img class="images-card" src="images/element6.jpg" alt="sitio-web" />
           <div class="card-text">
             <h3 class="card-title">La inspiración no tiene límites</h3>
             <p class="paragraph paragraph-text">Sitio-web</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/libro.jpg" alt="diseño" />
+          <img class="images-card" src="images/element7.jpg" alt="diseño" />
           <div class="card-text">
             <h3 class="card-title">Edición Limitada</h3>
             <p class="paragraph paragraph-text">Diseño</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/targeta.jpg" alt="marketing" />
+          <img class="images-card" src="images/element8.jpg" alt="marketing" />
           <div class="card-text">
             <h3 class="card-title">Proyecto LAB</h3>
             <p class="paragraph paragraph-text">Marketing</p>
           </div>
         </div>
         <div>
-          <img class="images-card" src="images/portatil.jpg" alt="aplicaciones" />
+          <img class="images-card" src="images/element9.jpg" alt="aplicaciones" />
           <div class="card-text">
             <h3 class="card-title">Negocio en Crecimiento</h3>
             <p class="paragraph paragraph-text">Aplicaciones</p>
