correcciones tarea 3 final

--- a/index.html
+++ b/index.html
@@ -14,39 +14,35 @@
 
 <body>
   <!-- encabezado de la pagina con listas de navegación -->
-  <header class="container flex-container">
-    <!-- <div class="container"> -->
-    <div>
-      <ul class="list">
-        <li><a class="link link-webStudio" href="">WebStudio</a></li>
-      </ul>
-    </div>
+  <header>
+    <div class="container">
+      <div>
+        <a class="link link-webStudio" href="">WebStudio</a>
+        <nav>
+          <ul>
+            <li><a class="nav-link active" href="">Estudio</a></li>
+            <li>
+              <a class="nav-link" href="portfolio.html">Portafolio</a>
+            </li>
+            <li><a class="nav-link" href="">Contactos</a></li>
+          </ul>
+        </nav>
+      </div>
 
-    <nav class="links">
-      <ul class="list list-item">
-        <li><a class="link link-navigation studio" href="">Estudio</a></li>
-        <li>
-          <a class="link link-navigation portfolio" href="portfolio.html">Portafolio</a>
-        </li>
-        <li><a class="link link-navigation contact" href="">Contactos</a></li>
-      </ul>
-    </nav>
-
-    <div>
-      <ul class="list list-item1">
-        <li>
-          <a class="link link-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link link-contact number" href="tel:+525555296000">+52 55 5529 6000</a>
-        </li>
-      </ul>
-    </div>
-    <!-- <div> -->
+      <div>
+        <ul class="list list-item1">
+          <li>
+            <a class="link link-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="link link-contact number" href="tel:+525555296000">+52 55 5529 6000</a>
+          </li>
+        </ul>
+      </div>
   </header>
 
   <!-- titulo principal  y boton de navegacion -->
-  <main class="container">
+  <main>
     <section class="section">
       <div>
         <h1 class="title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
@@ -133,13 +129,9 @@
   </main>
 
   <!-- pie de pagina -->
-  <footer class="container container-footer">
+  <footer>
     <div>
-      <ul class="list">
-        <li>
-          <a class="link link-webStudio webstudio" href="">WebStudio</a>
-        </li>
-      </ul>
+        <a class="link link-webStudio webstudio" href="">WebStudio</a>
     </div>
     <div>
       <ul class="list-footer">
