--- a/portfolio.html
+++ b/portfolio.html
@@ -14,37 +14,35 @@
 
 <body>
   <!-- encabezado de la pagina con listas de navegación pagina portafolio -->
-  <header class="container flex-container">
-    <div>
-      <ul class="list">
-        <li><a class="link link-webStudio" href="">WebStudio</a></li>
-      </ul>
-    </div>
+  <header>
+    <div class="container">
+      <div>
+        <a class="link link-webStudio" href="">WebStudio</a>
+        <nav>
+          <ul>
+            <li><a class="nav-link active" href="index.html">Estudio</a></li>
+            <li>
+              <a class="nav-link" href="">Portafolio</a>
+            </li>
+            <li><a class="nav-link" href="">Contactos</a></li>
+          </ul>
+        </nav>
+      </div>
 
-    <nav class="links">
-      <ul class="list list-item">
-        <li><a class="link link-navigation studio" href="index.html">Estudio</a></li>
-        <li>
-          <a class="link link-navigation portfolio" href="">Portafolio</a>
-        </li>
-        <li><a class="link link-navigation contact" href="">Contactos</a></li>
-      </ul>
-    </nav>
-
-    <div>
-      <ul class="list list-item1">
-        <li>
-          <a class="link link-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link link-contact number" href="tel:+525555296000">+52 55 5529 6000</a>
-        </li>
-      </ul>
-    </div>
+      <div>
+        <ul class="list list-item1">
+          <li>
+            <a class="link link-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="link link-contact number" href="tel:+525555296000">+52 55 5529 6000</a>
+          </li>
+        </ul>
+      </div>
   </header>
 
   <!-- contenido, articulos de la pagina -->
-  <main class="container">
+  <main>
     <div class="container-portfolio">
       <div class="flex-portfolio">
         <ul class="list list-portfolio">
@@ -126,13 +124,9 @@
   </main>
 
   <!-- pie de pagina portafolio -->
-  <footer class="container container-footer">
+  <footer>
     <div>
-      <ul class="list">
-        <li>
-          <a class="link link-webStudio webstudio" href="">WebStudio</a>
-        </li>
-      </ul>
+        <a class="link link-webStudio webstudio" href="">WebStudio</a>
     </div>
     <div>
       <ul class="list-footer">
