--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </li>
         </ul>
       </div>
+    </div>
   </header>
 
   <!-- titulo principal  y boton de navegacion -->
@@ -130,23 +131,25 @@
 
   <!-- pie de pagina -->
   <footer>
-    <div>
+    <div class="container">
+      <div>
         <a class="link link-webStudio webstudio" href="">WebStudio</a>
-    </div>
-    <div>
-      <ul class="list-footer">
-        <li>
-          <address class="address">
-            Calz. Ticomán 500, Ciudad de México, CDMX, México
-          </address>
-        </li>
-        <li>
-          <a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link link-contact" href="tel:+525555296000">+52 55 5529 6000</a>
-        </li>
-      </ul>
+      </div>
+      <div>
+        <ul class="list-footer">
+          <li>
+            <address class="address">
+              Calz. Ticomán 500, Ciudad de México, CDMX, México
+            </address>
+          </li>
+          <li>
+            <a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="link link-contact" href="tel:+525555296000">+52 55 5529 6000</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
