--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
         <a class="link link-webStudio" href="">WebStudio</a>
         <nav>
           <ul>
-            <li><a class="nav-link active" href="index.html">Estudio</a></li>
+            <li><a class="nav-link" href="index.html">Estudio</a></li>
             <li>
-              <a class="nav-link" href="">Portafolio</a>
+              <a class="nav-link active" href="">Portafolio</a>
             </li>
             <li><a class="nav-link" href="">Contactos</a></li>
           </ul>
@@ -39,6 +39,7 @@
           </li>
         </ul>
       </div>
+    </div>
   </header>
 
   <!-- contenido, articulos de la pagina -->
@@ -125,23 +126,25 @@
 
   <!-- pie de pagina portafolio -->
   <footer>
-    <div>
+    <div class="container">
+      <div>
         <a class="link link-webStudio webstudio" href="">WebStudio</a>
-    </div>
-    <div>
-      <ul class="list-footer">
-        <li>
-          <address class="address">
-            Calz. Ticomán 500, Ciudad de México, CDMX, México
-          </address>
-        </li>
-        <li>
-          <a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link link-contact" href="tel:+525555296000">+52 55 5529 6000</a>
-        </li>
-      </ul>
+      </div>
+      <div>
+        <ul class="list-footer">
+          <li>
+            <address class="address">
+              Calz. Ticomán 500, Ciudad de México, CDMX, México
+            </address>
+          </li>
+          <li>
+            <a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="link link-contact" href="tel:+525555296000">+52 55 5529 6000</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
